[package]
name = "yawl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
futures-util = "0.3.30"
indicatif = "0.17.7"
ratelimit = "0.9.0"
serde = "1.0.195"
solana-client = "~1.16"
solana-program = "~1.16"
solana-sdk = "~1.16"
thiserror = "1.0.56"
tokio = "1.35.1"
url = "2.5.0"
